[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/WorldCreateUI.gd" id="1"]

[node name="WorldCreateUI" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Create World"

[node name="NameEdit" type="LineEdit" parent="Panel/VBox"]
placeholder_text = "World name"

[node name="SeedEdit" type="LineEdit" parent="Panel/VBox"]
placeholder_text = "Seed (blank = random)"

[node name="ModeOption" type="OptionButton" parent="Panel/VBox"]

[node name="PresetOption" type="OptionButton" parent="Panel/VBox"]

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]

[node name="BackButton" type="Button" parent="Panel/VBox/Buttons"]
text = "Back"
size_flags_horizontal = 3

[node name="CreateButton" type="Button" parent="Panel/VBox/Buttons"]
text = "Create"
size_flags_horizontal = 3